refactor: share install snippet across notebooks

--- a/docs/Examples/Chamber_Wall_Loss/Notebooks/Chamber_Forward_Simulation.ipynb
+++ b/docs/Examples/Chamber_Wall_Loss/Notebooks/Chamber_Forward_Simulation.ipynb
@@ -21,16 +21,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details> <summary>▶️ Install Particula</summary>\n",
-    "try:\n",
-    "    import google.colab\n",
-    "except ImportError:\n",
-    "    # not Colab → do nothing\n",
-    "    pass\n",
-    "else:\n",
-    "    # in Colab → install quietly\n",
-    "    get_ipython().system(\"pip install particula[extra] --quiet\")\n",
-    "</details>"
+    "```{include} ../../_includes/install_particula.ipynb\n",
+    "```"
    ]
   },
   {
@@ -441,7 +433,7 @@
    "source": [
     "## Takeaways\n",
     "\n",
-    "In this notebook, we conducted a series of simulations to study the behavior of aerosol particles within a controlled chamber environment. Our objective was to understand how different processes — namely coagulation, dilution, and wall loss — individually and collectively influence the size distribution of particles over time.\n",
+    "In this notebook, we conducted a series of simulations to study the behavior of aerosol particles within a controlled chamber environment. Our objective was to understand how different processes \u2014 namely coagulation, dilution, and wall loss \u2014 individually and collectively influence the size distribution of particles over time.\n",
     "\n",
     "Our simulations revealed several key findings:\n",
     "\n",
