--- a/docs/Examples/Dynamics/Coagulation/Charge/Coagulation_with_Charge_functional.ipynb
+++ b/docs/Examples/Dynamics/Coagulation/Charge/Coagulation_with_Charge_functional.ipynb
@@ -29,16 +29,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details> <summary>▶️ Install Particula</summary>\n",
-    "try:\n",
-    "    import google.colab\n",
-    "except ImportError:\n",
-    "    # not Colab → do nothing\n",
-    "    pass\n",
-    "else:\n",
-    "    # in Colab → install quietly\n",
-    "    get_ipython().system(\"pip install particula[extra] --quiet\")\n",
-    "</details>"
+    "```{include} ../../../_includes/install_particula.ipynb\n",
+    "```"
    ]
   },
   {
@@ -61,7 +53,7 @@
    "metadata": {},
    "source": [
     "## Define the Particle Size Distribution\n",
-    "We create a size distribution for aerosol particles using a logarithmic scale for particle radius, ranging from 1 nm to 10 μm. We calculate the mass of particles in each size bin assuming they are spherical and have a standard density.\n",
+    "We create a size distribution for aerosol particles using a logarithmic scale for particle radius, ranging from 1 nm to 10 \u03bcm. We calculate the mass of particles in each size bin assuming they are spherical and have a standard density.\n",
     " Define the bins for particle radius using a logarithmic scale"
    ]
   },
@@ -72,10 +64,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "radius_bins = np.logspace(start=-9, stop=-4, num=250)  # m (1 nm to 10 μm)\n",
+    "radius_bins = np.logspace(start=-9, stop=-4, num=250)  # m (1 nm to 10 \u03bcm)\n",
     "\n",
     "# Calculate the mass of particles for each size bin\n",
-    "# The mass is calculated using the formula for the volume of a sphere (4/3 * π * r^3)\n",
+    "# The mass is calculated using the formula for the volume of a sphere (4/3 * \u03c0 * r^3)\n",
     "# and assuming a particle density of 1 g/cm^3 (which is 1000 kg/m^3 in SI units).\n",
     "mass_bins = 4 / 3 * np.pi * radius_bins**3 * 1e3  # kg"
    ]
