--- a/docs/Examples/Dynamics/Coagulation/Charge/Coagulation_with_Charge_objects.ipynb
+++ b/docs/Examples/Dynamics/Coagulation/Charge/Coagulation_with_Charge_objects.ipynb
@@ -28,16 +28,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details> <summary>▶️ Install Particula</summary>\n",
-    "try:\n",
-    "    import google.colab\n",
-    "except ImportError:\n",
-    "    # not Colab → do nothing\n",
-    "    pass\n",
-    "else:\n",
-    "    # in Colab → install quietly\n",
-    "    get_ipython().system(\"pip install particula[extra] --quiet\")\n",
-    "</details>"
+    "```{include} ../../../_includes/install_particula.ipynb\n",
+    "```"
    ]
   },
   {
@@ -60,7 +52,7 @@
    "metadata": {},
    "source": [
     "## Define the Particle Size Distribution\n",
-    "We create a size distribution for aerosol particles using a logarithmic scale for particle radius, ranging from 1 nm to 10 μm. We calculate the mass of particles in each size bin assuming they are spherical and have a standard density."
+    "We create a size distribution for aerosol particles using a logarithmic scale for particle radius, ranging from 1 nm to 10 \u03bcm. We calculate the mass of particles in each size bin assuming they are spherical and have a standard density."
    ]
   },
   {
@@ -71,7 +63,7 @@
    "outputs": [],
    "source": [
     "# Define the bins for particle radius using a logarithmic scale\n",
-    "radius_bins = np.logspace(start=-9, stop=-4, num=250)  # m (1 nm to 100 μm)\n",
+    "radius_bins = np.logspace(start=-9, stop=-4, num=250)  # m (1 nm to 100 \u03bcm)\n",
     "\n",
     "# Calculate the mass of particles for each size bin\n",
     "mass_bins = 4 / 3 * np.pi * radius_bins**3 * 1e3  # kg"
@@ -271,7 +263,7 @@
     "ax.set_xlabel(\"Particle radius r_i (m)\")\n",
     "ax.set_ylabel(\"Particle radius r_j (m)\")\n",
     "ax.set_title(\"Hard Sphere Coagulation Kernel\")\n",
-    "fig.colorbar(c, ax=ax, label=\"log10(Kernel) (m³/s)\")\n",
+    "fig.colorbar(c, ax=ax, label=\"log10(Kernel) (m\u00b3/s)\")\n",
     "plt.show()"
    ]
   },
@@ -337,7 +329,7 @@
     "ax.set_xlabel(\"Particle radius r_i (m)\")\n",
     "ax.set_ylabel(\"Particle radius r_j (m)\")\n",
     "ax.set_title(\"Coulomb Dyachkov 2007 Coagulation Kernel\")\n",
-    "fig.colorbar(c, ax=ax, label=\"Kernel (m³/s)\")\n",
+    "fig.colorbar(c, ax=ax, label=\"Kernel (m\u00b3/s)\")\n",
     "plt.show()"
    ]
   },
@@ -403,7 +395,7 @@
     "ax.set_xlabel(\"Particle radius r_i (m)\")\n",
     "ax.set_ylabel(\"Particle radius r_j (m)\")\n",
     "ax.set_title(\"Coulomb Gatti 2008 Coagulation Kernel\")\n",
-    "fig.colorbar(c, ax=ax, label=\"Kernel (m³/s)\")\n",
+    "fig.colorbar(c, ax=ax, label=\"Kernel (m\u00b3/s)\")\n",
     "plt.show()"
    ]
   },
@@ -471,7 +463,7 @@
     "ax.set_xlabel(\"Particle radius r_i (m)\")\n",
     "ax.set_ylabel(\"Particle radius r_j (m)\")\n",
     "ax.set_title(\"Coulomb Gopalakrishnan 2012 Coagulation Kernel\")\n",
-    "fig.colorbar(c, ax=ax, label=\"Kernel (m³/s)\")\n",
+    "fig.colorbar(c, ax=ax, label=\"Kernel (m\u00b3/s)\")\n",
     "plt.show()"
    ]
   },
@@ -538,7 +530,7 @@
     "ax.set_xlabel(\"Particle radius r_i (m)\")\n",
     "ax.set_ylabel(\"Particle radius r_j (m)\")\n",
     "ax.set_title(\"Coulomb Chahl 2019 Coagulation Kernel\")\n",
-    "fig.colorbar(c, ax=ax, label=\"Kernel (m³/s)\")\n",
+    "fig.colorbar(c, ax=ax, label=\"Kernel (m\u00b3/s)\")\n",
     "plt.show()"
    ]
   },
@@ -619,7 +611,7 @@
     "ax.set_xscale(\"log\")\n",
     "ax.set_yscale(\"log\")\n",
     "ax.set_xlabel(\"Particle radius r_j (m)\")\n",
-    "ax.set_ylabel(\"Kernel K(r_i, r_j) (m³/s)\")\n",
+    "ax.set_ylabel(\"Kernel K(r_i, r_j) (m\u00b3/s)\")\n",
     "ax.set_title(\n",
     "    f\"Comparison of Coagulation Kernels, radius_i = {radius_bins[index]:.2e} m\"\n",
     ")\n",
@@ -692,7 +684,7 @@
     "ax.set_xscale(\"log\")\n",
     "ax.set_yscale(\"log\")\n",
     "ax.set_xlabel(\"Particle radius r_j (m)\")\n",
-    "ax.set_ylabel(\"Kernel K(r_i, r_j) (m³/s)\")\n",
+    "ax.set_ylabel(\"Kernel K(r_i, r_j) (m\u00b3/s)\")\n",
     "ax.set_title(\n",
     "    f\"Comparison of Coagulation Kernels, radius_i = {radius_bins[index]:.2e} m\"\n",
     ")\n",
@@ -765,7 +757,7 @@
     "ax.set_xscale(\"log\")\n",
     "ax.set_yscale(\"log\")\n",
     "ax.set_xlabel(\"Particle radius r_j (m)\")\n",
-    "ax.set_ylabel(\"Kernel K(r_i, r_j) (m³/s)\")\n",
+    "ax.set_ylabel(\"Kernel K(r_i, r_j) (m\u00b3/s)\")\n",
     "ax.set_title(\n",
     "    f\"Comparison of Coagulation Kernels, radius_i = {radius_bins[index]:.2e} m\"\n",
     ")\n",
@@ -857,7 +849,7 @@
     "ax1.plot(radius_bins, number_concentration, color=\"green\")\n",
     "ax1.set_xscale(\"log\")\n",
     "ax1.set_xlabel(\"Particle radius (m)\")\n",
-    "ax1.set_ylabel(\"Number concentration (1/m³)\")\n",
+    "ax1.set_ylabel(\"Number concentration (1/m\u00b3)\")\n",
     "ax1.set_title(\"Particle Number Concentration vs. Radius\")\n",
     "ax1.grid(True, which=\"both\", ls=\"--\")\n",
     "plt.show()\n",
@@ -870,7 +862,7 @@
     "ax2.set_xscale(\"log\")\n",
     "# ax2.set_yscale('log')\n",
     "ax2.set_xlabel(\"Particle radius (m)\")\n",
-    "ax2.set_ylabel(\"Coagulation rate (1/(m³·s))\")\n",
+    "ax2.set_ylabel(\"Coagulation rate (1/(m\u00b3\u00b7s))\")\n",
     "ax2.set_title(\"Coagulation Rates vs. Particle Radius\")\n",
     "ax2.legend()\n",
     "ax2.grid(True, which=\"both\", ls=\"--\")\n",
