--- a/docs/Examples/Dynamics/Coagulation/Coagulation_3_Particle_Resolved_Pattern.ipynb
+++ b/docs/Examples/Dynamics/Coagulation/Coagulation_3_Particle_Resolved_Pattern.ipynb
@@ -19,16 +19,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details> <summary>▶️ Install Particula</summary>\n",
-    "try:\n",
-    "    import google.colab\n",
-    "except ImportError:\n",
-    "    # not Colab → do nothing\n",
-    "    pass\n",
-    "else:\n",
-    "    # in Colab → install quietly\n",
-    "    get_ipython().system(\"pip install particula[extra] --quiet\")\n",
-    "</details>"
+    "```{include} ../../_includes/install_particula.ipynb\n",
+    "```"
    ]
   },
   {
@@ -53,7 +45,7 @@
     "In this section, we define the core components of our particle-resolved coagulation system, focusing on the atmosphere setup, particle distribution, and mass resolution. This step-by-step breakdown helps clarify how the `Builder` pattern organizes the construction of complex objects and ensures input parameters are properly verified.\n",
     "\n",
     "**Atmospheric Setup**\n",
-    "We begin by configuring the atmosphere using the `AtmosphereBuilder`. This allows for flexibility in defining environmental parameters such as temperature and pressure, as well as adding gas species. In this case, we add a preset gas species that does not condense and set the atmospheric conditions to 25°C and 1 atm.\n",
+    "We begin by configuring the atmosphere using the `AtmosphereBuilder`. This allows for flexibility in defining environmental parameters such as temperature and pressure, as well as adding gas species. In this case, we add a preset gas species that does not condense and set the atmospheric conditions to 25\u00b0C and 1 atm.\n",
     "\n",
     "**Particle Distribution**\n",
     "The particle distribution is generated using a lognormal distribution, a common approach for representing aerosol particle sizes. The parameters for this distribution include:\n",
@@ -62,7 +54,7 @@
     "- The total number of particles is 100,000 samples taken to capture the variability of the distribution.\n",
     "\n",
     "**Mass Calculation**\n",
-    "The mass of each particle is calculated assuming a particle density of 1500 kg/m³. This density corresponds to typical aerosol materials like dust or certain types of particulate matter. The particle masses are computed using the formula for the volume of a sphere, multiplied by the density.\n",
+    "The mass of each particle is calculated assuming a particle density of 1500 kg/m\u00b3. This density corresponds to typical aerosol materials like dust or certain types of particulate matter. The particle masses are computed using the formula for the volume of a sphere, multiplied by the density.\n",
     "\n",
     "**Resolved Particle Mass Representation**\n",
     "To capture the diversity of the aerosol population, we use a particle-resolved representation for mass. This approach explicitly tracks individual particle masses and assigns properties such as density and charge. The key strategies used are:\n",
@@ -73,7 +65,7 @@
     "**Final Aerosol Object**\n",
     "The `Aerosol` object brings together the atmosphere and the resolved particle masses into a cohesive framework. This encapsulated representation can then be used to simulate particle interactions and coagulation events within the atmosphere.\n",
     "\n",
-    "Finally, we print the properties of the `aerosol` object’s atmosphere to verify the correct setup."
+    "Finally, we print the properties of the `aerosol` object\u2019s atmosphere to verify the correct setup."
    ]
   },
   {
@@ -100,7 +92,7 @@
     "# AtmosphereBuilder constructs the atmosphere with predefined species\n",
     "atmosphere = (\n",
     "    par.gas.AtmosphereBuilder()\n",
-    "    .set_temperature(25, temperature_units=\"degC\")  # Set temperature to 25°C\n",
+    "    .set_temperature(25, temperature_units=\"degC\")  # Set temperature to 25\u00b0C\n",
     "    .set_pressure(1, pressure_units=\"atm\")  # Set pressure to 1 atmosphere\n",
     "    .build()  # Finalize the atmosphere object\n",
     ")\n",
@@ -156,7 +148,7 @@
     "\n",
     "- **Coagulation Strategy:** The strategy for how coagulation is performed is selected using `coagulation.ParticleResolved()`. This specific strategy dictates how particle interactions are handled at the individual particle level, ensuring that the coagulation process respects the details of a particle-resolved approach. In this context, particles are treated as distinct entities, and the merging process is computed explicitly for each pair that interacts.\n",
     "\n",
-    "- **Particle Process:** Once the strategy is defined, the `Coagulation` process is initialized by passing the chosen strategy (`coagulation_strategy`) to the `particle_process.Coagulation` class. This `Coagulation` class is responsible for running the actual simulation. It orchestrates the execution of coagulation by applying the selected strategy over the particle distribution. During each execution step, the particle properties—such as mass, size, and count—are updated according to the rules defined by the particle-resolved strategy.\n",
+    "- **Particle Process:** Once the strategy is defined, the `Coagulation` process is initialized by passing the chosen strategy (`coagulation_strategy`) to the `particle_process.Coagulation` class. This `Coagulation` class is responsible for running the actual simulation. It orchestrates the execution of coagulation by applying the selected strategy over the particle distribution. During each execution step, the particle properties\u2014such as mass, size, and count\u2014are updated according to the rules defined by the particle-resolved strategy.\n",
     "\n",
     "- **Execution of the Process:** The coagulation process is applied in steps using the `coagulation_process.execute()` method. In each step, the particles' masses are updated based on the time step and sub-steps provided. The time step controls the temporal resolution of the simulation, while the sub-steps break the time step into finer increments to ensure accurate resolution of coagulation events.\n",
     "\n",
