--- a/docs/Examples/Dynamics/Coagulation/Coagulation_4_Compared.ipynb
+++ b/docs/Examples/Dynamics/Coagulation/Coagulation_4_Compared.ipynb
@@ -16,16 +16,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details> <summary>▶️ Install Particula</summary>\n",
-    "try:\n",
-    "    import google.colab\n",
-    "except ImportError:\n",
-    "    # not Colab → do nothing\n",
-    "    pass\n",
-    "else:\n",
-    "    # in Colab → install quietly\n",
-    "    get_ipython().system(\"pip install particula[extra] --quiet\")\n",
-    "</details>"
+    "```{include} ../../_includes/install_particula.ipynb\n",
+    "```"
    ]
   },
   {
@@ -48,7 +40,7 @@
     "\n",
     "In this section, we define the common parameters used throughout the notebook for modeling the particle distribution and atmosphere. These parameters include the mode of the particle size distribution, the geometric standard deviation, the number of particles in each mode, and the particle density. Additionally, we set the volume of the system for our simulations. The volume is only needed for the particle resolved approach, as the PMF and PDF methods do not require a volume to be defined.\n",
     "\n",
-    "We also construct a simplified atmospheric environment using an `AtmosphereBuilder`, which includes a preset gas species that does not condense in the atmosphere. The temperature is set to 25°C and the pressure to 1 atmosphere, reflecting typical ambient conditions."
+    "We also construct a simplified atmospheric environment using an `AtmosphereBuilder`, which includes a preset gas species that does not condense in the atmosphere. The temperature is set to 25\u00b0C and the pressure to 1 atmosphere, reflecting typical ambient conditions."
    ]
   },
   {
@@ -70,7 +62,7 @@
     "# AtmosphereBuilder constructs the atmosphere with predefined species\n",
     "atmosphere = (\n",
     "    par.gas.AtmosphereBuilder()\n",
-    "    .set_temperature(25, temperature_units=\"degC\")  # Set temperature to 25°C\n",
+    "    .set_temperature(25, temperature_units=\"degC\")  # Set temperature to 25\u00b0C\n",
     "    .set_pressure(1, pressure_units=\"atm\")  # Set pressure to 1 atmosphere\n",
     "    .build()  # Finalize the atmosphere object\n",
     ")"
