--- a/docs/Examples/Dynamics/Customization/Adding_Particles_During_Simulation.ipynb
+++ b/docs/Examples/Dynamics/Customization/Adding_Particles_During_Simulation.ipynb
@@ -17,16 +17,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details> <summary>▶️ Install Particula</summary>\n",
-    "try:\n",
-    "    import google.colab\n",
-    "except ImportError:\n",
-    "    # not Colab → do nothing\n",
-    "    pass\n",
-    "else:\n",
-    "    # in Colab → install quietly\n",
-    "    get_ipython().system(\"pip install particula[extra] --quiet\")\n",
-    "</details>"
+    "```{include} ../../_includes/install_particula.ipynb\n",
+    "```"
    ]
   },
   {
@@ -75,7 +67,7 @@
     "# AtmosphereBuilder constructs the atmosphere with predefined species\n",
     "atmosphere = (\n",
     "    par.gas.AtmosphereBuilder()\n",
-    "    .set_temperature(25, temperature_units=\"degC\")  # Set temperature to 25°C\n",
+    "    .set_temperature(25, temperature_units=\"degC\")  # Set temperature to 25\u00b0C\n",
     "    .set_pressure(1, pressure_units=\"atm\")  # Set pressure to 1 atmosphere\n",
     "    .build()  # Finalize the atmosphere object\n",
     ")\n",
