--- a/docs/Examples/Particle_Phase/Notebooks/Aerosol_Distributions.ipynb
+++ b/docs/Examples/Particle_Phase/Notebooks/Aerosol_Distributions.ipynb
@@ -13,16 +13,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details> <summary>▶️ Install Particula</summary>\n",
-    "try:\n",
-    "    import google.colab\n",
-    "except ImportError:\n",
-    "    # not Colab → do nothing\n",
-    "    pass\n",
-    "else:\n",
-    "    # in Colab → install quietly\n",
-    "    get_ipython().system(\"pip install particula[extra] --quiet\")\n",
-    "</details>"
+    "```{include} ../../_includes/install_particula.ipynb\n",
+    "```"
    ]
   },
   {
@@ -60,7 +52,7 @@
     "\n",
     "The `scale` parameter is defined as the mode of the distribution.\n",
     "\n",
-    "The probability density above is defined in the “standardized” form. To shift and/or scale the distribution use the loc and scale parameters. Specifically, `lognorm.pdf(x, s, loc, scale)` is identically equivalent to `lognorm.pdf(y, s) / scale` with `y = (x - loc) / scale`. Note that shifting the location of a distribution does not make it a “noncentral” distribution; noncentral generalizations of some distributions are available in separate classes.\n",
+    "The probability density above is defined in the \u201cstandardized\u201d form. To shift and/or scale the distribution use the loc and scale parameters. Specifically, `lognorm.pdf(x, s, loc, scale)` is identically equivalent to `lognorm.pdf(y, s) / scale` with `y = (x - loc) / scale`. Note that shifting the location of a distribution does not make it a \u201cnoncentral\u201d distribution; noncentral generalizations of some distributions are available in separate classes.\n",
     "\n",
     "- [PDF Wikipedia](https://en.wikipedia.org/wiki/probability_density_function)\n",
     "- [Log-normal Wikipedia](https://en.wikipedia.org/wiki/Log-normal_distribution)\n",
@@ -169,7 +161,7 @@
     "plt.plot(x_values, single_mode_distribution, label=\"Single Mode\", linewidth=4)\n",
     "plt.plot(x_values, multi_mode_distribution, label=\"Multi Mode\")\n",
     "plt.title(\"Lognormal Particle Size Distribution\")\n",
-    "plt.xlabel(\"Particle Diameter (μm)\")\n",
+    "plt.xlabel(\"Particle Diameter (\u03bcm)\")\n",
     "plt.ylabel(\"Frequency\")\n",
     "plt.xscale(\"log\")\n",
     "plt.legend()\n",
@@ -274,7 +266,7 @@
     "plt.plot(x_values, single_pmf_distribution, label=\"Single Mode\", linewidth=4)\n",
     "plt.plot(x_values, multi_pmf_distribution, label=\"Multi Mode\")\n",
     "plt.title(\"Lognormal PMF Particle Size Distribution\")\n",
-    "plt.xlabel(\"Particle Diameter (μm)\")\n",
+    "plt.xlabel(\"Particle Diameter (\u03bcm)\")\n",
     "plt.ylabel(\"Number of Particles\")\n",
     "plt.xscale(\"log\")\n",
     "plt.legend()\n",
