--- a/docs/Examples/Particle_Phase/Notebooks/Functional/Activity_Functions.ipynb
+++ b/docs/Examples/Particle_Phase/Notebooks/Functional/Activity_Functions.ipynb
@@ -31,16 +31,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details> <summary>▶️ Install Particula</summary>\n",
-    "try:\n",
-    "    import google.colab\n",
-    "except ImportError:\n",
-    "    # not Colab → do nothing\n",
-    "    pass\n",
-    "else:\n",
-    "    # in Colab → install quietly\n",
-    "    get_ipython().system(\"pip install particula[extra] --quiet\")\n",
-    "</details>"
+    "```{include} ../../../_includes/install_particula.ipynb\n",
+    "```"
    ]
   },
   {
