--- a/docs/Examples/Gas_Phase/Notebooks/AtmosphereTutorial.ipynb
+++ b/docs/Examples/Gas_Phase/Notebooks/AtmosphereTutorial.ipynb
@@ -19,16 +19,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details> <summary>▶️ Install Particula</summary>\n",
-    "try:\n",
-    "    import google.colab\n",
-    "except ImportError:\n",
-    "    # not Colab → do nothing\n",
-    "    pass\n",
-    "else:\n",
-    "    # in Colab → install quietly\n",
-    "    get_ipython().system(\"pip install particula[extra] --quiet\")\n",
-    "</details>"
+    "```{include} ../../_includes/install_particula.ipynb\n",
+    "```"
    ]
   },
   {
@@ -186,9 +178,9 @@
     "   - $ L $ is the standard temperature lapse rate (approximately 0.0065 K/m),\n",
     "   - $ h $ is the altitude in meters (10000 m for 10 km),\n",
     "   - $ T_0 $ is the reference temperature at sea level (288.15 K),\n",
-    "   - $ g $ is the acceleration due to gravity (9.80665 m/s²),\n",
+    "   - $ g $ is the acceleration due to gravity (9.80665 m/s\u00b2),\n",
     "   - $ M $ is the molar mass of Earth's air (0.0289644 kg/mol),\n",
-    "   - $ R $ is the universal gas constant (8.314 J/(mol·K)).\n",
+    "   - $ R $ is the universal gas constant (8.314 J/(mol\u00b7K)).\n",
     "\n",
     "1. **Temperature Change**: The temperature decreases linearly with altitude at the lapse rate $ L $:\n",
     "   \n",
@@ -227,7 +219,7 @@
     "sea_level_temperature = 288.15  # Reference temperature at sea level (K)\n",
     "gravity = 9.80665  # Acceleration due to gravity (m/s^2)\n",
     "molar_mass_air = 0.0289644  # Molar mass of Earth's air (kg/mol)\n",
-    "universal_gas_constant = 8.314  # Universal gas constant (J/(mol·K))\n",
+    "universal_gas_constant = 8.314  # Universal gas constant (J/(mol\u00b7K))\n",
     "temperature_lapse_rate = 0.0065  # Standard temperature lapse rate (K/m)\n",
     "\n",
     "# Generate an array of altitudes from sea level (0 meters) to 10 km (10000 meters), divided into 100 intervals\n",
