--- a/pr-preview/pr-778/Examples/Simulations/Notebooks/Biomass_Burning_Cloud_Interactions/Biomass_Burning_Cloud_Interactions.ipynb
+++ b/pr-preview/pr-778/Examples/Simulations/Notebooks/Biomass_Burning_Cloud_Interactions/Biomass_Burning_Cloud_Interactions.ipynb
@@ -57,15 +57,8 @@
    "id": "e1f3e08c",
    "metadata": {},
    "source": [
-    "<details> <summary>▶️ Install Particula</summary>\n",
-    "try:\n",
-    "    import google.colab\n",
-    "except ImportError:\n",
-    "    # not Colab → do nothing\n",
-    "    pass\n",
-    "else:\n",
-    "    # in Colab → install quietly\n",
-    "    get_ipython().system(\"pip install particula[extra] --quiet\")\n",
+    "<details> <summary>Install Particula Command</summary>\n",
+    "!pip install particula[extra] --quiet\n",
     "</details>"
    ]
   },
