removed html for colab button, now just simple pip comment

--- a/docs/Examples/Chamber_Wall_Loss/Notebooks/Chamber_Forward_Simulation.ipynb
+++ b/docs/Examples/Chamber_Wall_Loss/Notebooks/Chamber_Forward_Simulation.ipynb
@@ -19,33 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Install Particula 🚀\n",
-    "#@markdown Click **Run** (▶) or press **Shift + Enter** to install Particula.\n",
-    "#@markdown _(Outside Colab this cell is skipped.)_\n",
-    "\n",
-    "try:\n",
-    "    import google.colab      # present ⇒ we’re in Colab\n",
-    "    import subprocess, sys\n",
-    "\n",
-    "    subprocess.check_call(\n",
-    "        [sys.executable, \"-m\", \"pip\", \"install\", \"particula[extra]\", \"-q\"]\n",
-    "    )\n",
-    "    print(\"✅ Particula installed!\")\n",
-    "except ImportError:\n",
-    "    # not running inside Colab → skip\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# In Colab uncomment the following command to install particula:\n",
+    "#!pip install particula[extra] --quiet\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
